# ripr-swarm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  ripr.toml.example
.cargo/: config.toml
.config/: nextest.toml
.factory/: threat-model.md
.github/: dependabot.yml  pull_request_template.md  settings.yml
.rails/: README.md  index.toml
.ripr/: README.md  allow-attributes.txt  no-panic-allowlist.toml  positioning-language-allowlist.txt  static-language-allowlist.toml  (+2 more)
.ripr-spec/: README.md  index.toml
crates/ripr/: Cargo.toml  README.md
crates/ripr/examples/sample/: example.diff
crates/ripr/examples/sample/src/: lib.rs
crates/ripr/examples/sample/tests/: pricing.rs
crates/ripr/src/: app.rs  config.rs  lib.rs  lsp.rs  main.rs  startup.rs
crates/ripr/src/agent/: loop_commands.rs  mod.rs  provenance.rs
crates/ripr/src/analysis/: canonical_gap.rs  classifier.rs  mod.rs  pipeline.rs  rust_index.rs  seam_cache.rs  seam_classification.rs  seam_inventory.rs  seams.rs  sort.rs  summary.rs  test_grip_evidence.rs  value_resolution.rs
crates/ripr/src/analysis/classifier/: evidence.rs  finding.rs  owner.rs
crates/ripr/src/analysis/classify/: activation.rs  context.rs  decision.rs  flow.rs  infection.rs  mod.rs  reach.rs  related_tests.rs  reveal.rs  text.rs
crates/ripr/src/analysis/classify/text/: delimiter.rs  error_variant.rs  variants.rs
crates/ripr/src/analysis/diff/: load.rs  mod.rs  model.rs  parse.rs  path.rs
crates/ripr/src/analysis/extract/: calls.rs  literals.rs  mod.rs  oracles.rs  probe_shapes.rs  returns.rs  text.rs
crates/ripr/src/analysis/extract/oracles/: arguments.rs  classify.rs  mod.rs  patterns.rs  scan.rs
crates/ripr/src/analysis/facts/: build.rs  mod.rs  model.rs
crates/ripr/src/analysis/language/: adapter.rs  id.rs  mod.rs  python.rs  router.rs  rust.rs  typescript.rs
crates/ripr/src/analysis/language/python/: python_tests.rs  source_utils.rs  utils.rs
crates/ripr/src/analysis/probes/: classify.rs  diff.rs  expectations.rs  family.rs  ids.rs  lexical.rs  mod.rs  repo.rs
crates/ripr/src/analysis/syntax/: adapter.rs  lexical.rs  mod.rs  ra.rs
crates/ripr/src/analysis/workspace/: classify.rs  discover.rs  mod.rs  select.rs
crates/ripr/src/app/: agent_brief.rs  agent_review_summary.rs  agent_status.rs  agent_workflow.rs  check.rs  context.rs  explain.rs  selector.rs
crates/ripr/src/app/agent_review_summary/: artifacts.rs  json.rs  markdown.rs  receipt.rs  report.rs  types.rs  util.rs
crates/ripr/src/app/check/: options_builder.rs  output_builder.rs
crates/ripr/src/app/tests/: badge_rendering.rs  mod.rs  mode_and_selector.rs  rendering_contracts.rs
crates/ripr/src/cli/: agent.rs  command.rs  commands.rs  commands_agent_dispatch.rs  commands_agent_support.rs  commands_common.rs  commands_context.rs  commands_numeric.rs  commands_options.rs  commands_support.rs  commands_timestamps.rs  execute.rs  help.rs  mod.rs  parse.rs
crates/ripr/src/cli/commands/: agent.rs  dispatch.rs  init.rs  shared.rs  write.rs
crates/ripr/src/cli/commands/init/: parser.rs  workflow.rs
crates/ripr/src/cli/help/: agent.rs  core.rs  overview.rs  policy.rs  pr.rs  reports.rs  swarm.rs
crates/ripr/src/cli/parse/: format.rs  mode.rs  value.rs
crates/ripr/src/domain/: classification.rs  context_packet.rs  evidence.rs  language.rs  mod.rs  probe.rs  summary.rs  support.rs
crates/ripr/src/lsp/: actions.rs  backend.rs  capabilities.rs  config.rs  diagnostics.rs  gap_artifacts.rs  hover.rs  state.rs  tests.rs  uri.rs
crates/ripr/src/output/: agent_brief.rs  agent_receipt.rs  agent_seam_packets.rs  agent_workflow.rs  assistant_loop_health.rs  baseline.rs  baseline_delta.rs  baseline_update.rs  coverage_grip_frontier.rs  evidence_health.rs  evidence_record.rs  first_pr.rs  first_useful_action.rs  format.rs  gap_decision_ledger.rs  gate.rs  github.rs  human.rs  markdown.rs  mod.rs  mutation_calibration.rs  outcome.rs  path.rs  policy_history.rs  policy_operations.rs  policy_preview_promotion.rs  policy_promotion.rs  policy_readiness.rs  pr_evidence_ledger.rs  pr_inline_comment_publish_plan.rs  pr_review_front_panel.rs  preview_actionability.rs  python_repair_card.rs  receipt_lifecycle.rs  receipt_state.rs  render.rs  repo_exposure.rs  repo_seams.rs  report_packet_index.rs  review_comments.rs  (+9 more)
crates/ripr/src/output/badge/: mod.rs  model.rs  render.rs  summaries.rs  test_efficiency.rs  tests.rs
crates/ripr/src/output/evidence_health/: json.rs  markdown.rs
crates/ripr/src/output/first_useful_action/: mod.rs  parsing.rs  selection.rs  types.rs
crates/ripr/src/output/gate/: input.rs  input_artifacts.rs  mod.rs  model.rs  presentation.rs
crates/ripr/src/output/human/: evidence_lines.rs  sections.rs
crates/ripr/src/output/json/: context_packet.rs  finding_alignment.rs  formatter.rs  mod.rs  report.rs
crates/ripr/src/output/mutation_calibration/: outcome_records.rs
crates/ripr/src/output/pilot/: commands.rs  mod.rs  ranking.rs  render.rs  tests.rs  types.rs
crates/ripr/src/output/pilot/render/: complete.rs  render_helpers.rs  timeout.rs
crates/ripr/tests/: cli_smoke.rs
docs/: CI.md  (+89 more)
xtask/: Cargo.toml
xtask/src/: cache.rs  command.rs  dispatch.rs  main.rs  repo_readiness.rs  run.rs  verification_contracts.rs
xtask/src/command/: help.rs
xtask/src/policy/: allow_attributes.rs  ci_lane_whitelist.rs  doc_roles.rs  droid_review.rs  executable_files.rs  file_policy.rs  local_context.rs  mod.rs  network.rs  no_panic.rs  positioning_language.rs  process.rs  product_copy.rs  static_language.rs  workflows.rs
xtask/src/reports/: annotations.rs  badges.rs  dogfood.rs  first_pr.rs  fixtures.rs  impacted_evidence.rs  index.rs  lsp.rs  metrics.rs  mod.rs  mutation.rs  operator.rs  pr.rs  pr_evidence.rs  pr_evidence_summary.rs  receipts.rs  recommendation.rs  release.rs  repo.rs  review_comments.rs  sarif.rs  targeted_test.rs  test_oracles.rs
xtask/src/reports/pr_evidence_summary/: io.rs  model.rs  render.rs  util.rs
(+1492 files in other folders)
