[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
publish = false
license.workspace = true
rust-version.workspace = true

[dependencies]
ripr = { path = "../crates/ripr" }
ra_ap_syntax = "0.0.330"
serde_json = "1"
sha2 = "0.10"
zip = { version = "5", default-features = false, features = ["deflate"] }

[lints]
workspace = true
